# duckduckgo_search

./: pyproject.toml
duckduckgo_search/: utils.py
