[tool.poetry]
name = "duckduckgo_search"
version = "0.1.0"
description = "Search for words, documents, images, news, maps and text translation using the DuckDuckGo.com search engine."
authors = ["deedy5"]

[tool.poetry.dependencies]
python = ">=3.8"
click = ">=8.1.7"
primp = ">=0.8.1"
lxml = ">=5.2.2"

[tool.poetry.dev-dependencies]
mypy = ">=1.11.1"
pytest = ">=8.3.1"
pytest-asyncio = ">=0.23.8"
ruff = ">=0.6.1"

[tool.poetry.extras]
xml-parser = ["lxml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
